responsive & dark mode bugfix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,19 +9,19 @@ body {
 
 @layer base {
 	h1 {
-		@apply text-4xl;
+		@apply text-4xl text-primary dark:text-white;
 	}
 	h2 {
-		@apply text-3xl;
+		@apply text-3xl text-primary dark:text-white;
 	}
 	h3 {
-		@apply text-2xl;
+		@apply text-2xl text-primary dark:text-white;
 	}
 	h4 {
-		@apply text-xl;
+		@apply text-xl text-primary dark:text-white;
 	}
 	p {
-		@apply my-5;
+		@apply my-5 text-primary dark:text-white;
 	}
 
 	img {
